--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <title>Проект: Место</title>
 </head>
 <body class="page">
-  <header class="header"></header>
+  <header class="header">
+    <div class="header__logo"></div>
+    <div class="header__line"></div>
+  </header>
   <main class="content"></main>
   <footer class="footer"></footer>
 </body>
 </html>
-
