--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
     <div class="header__logo"></div>
     <div class="header__line"></div>
   </header>
-  <main class="content"></main>
+  <main class="content">
+    <section class="profile">
+      <div class="profile__item">
+        <div class="profile__avatar"></div>
+        <div class="profile__info">
+          <p class="profile__name">Жак-Ив Кусто</p>
+          <p class="profile__occupation">Исследователь океана</p>
+          <button class="profile__edit-btn"></button>
+        </div>
+      </div>
+      <button class="profile__add-btn"></button>
+    </section>
+    <section class="elements"></section>
+  </main>
   <footer class="footer"></footer>
 </body>
 </html>
