--- a/index.html
+++ b/index.html
@@ -24,7 +24,50 @@
       </div>
       <button class="profile__add-btn"></button>
     </section>
-    <section class="elements"></section>
+    <section class="elements">
+      <div class="element">
+        <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
+        <div class="element__info">
+          <p class="element__title">Карачаевск</p>
+          <button class="element__like"></button>
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
+        <div class="element__info">
+          <p class="element__title">Гора Эльбрус</p>
+          <button class="element__like"></button>
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
+        <div class="element__info">
+          <p class="element__title">Домбай</p>
+          <button class="element__like"></button>
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
+        <div class="element__info">
+          <p class="element__title">Алтай</p>
+          <button class="element__like"></button>
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
+        <div class="element__info">
+          <p class="element__title">Карелия</p>
+          <button class="element__like"></button>
+        </div>
+      </div>
+      <div class="element">
+        <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
+        <div class="element__info">
+          <p class="element__title">Владивосток</p>
+          <button class="element__like"></button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer"></footer>
 </body>
