fix: почистить код

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       </div>
     </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+   <div>&copy; 2020 Mesto Russia</div>
+  </footer>
 </body>
 </html>
