--- a/index.html
+++ b/index.html
@@ -19,52 +19,52 @@
         <div class="profile__info">
           <p class="profile__name">Жак-Ив Кусто</p>
           <p class="profile__occupation">Исследователь океана</p>
-          <button class="profile__edit-btn"></button>
+          <button class="profile__edit-btn button button_type_active"></button>
         </div>
       </div>
-      <button class="profile__add-btn"></button>
+      <button class="profile__add-btn button button_type_active"></button>
     </section>
     <section class="elements">
       <div class="element">
         <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
         <div class="element__info">
           <p class="element__title">Карачаевск</p>
-          <button class="element__like"></button>
+          <button class="element__like button button_type_active"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
         <div class="element__info">
           <p class="element__title">Гора Эльбрус</p>
-          <button class="element__like"></button>
+          <button class="element__like button button_type_active"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
         <div class="element__info">
           <p class="element__title">Домбай</p>
-          <button class="element__like"></button>
+          <button class="element__like button button_type_active"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
         <div class="element__info">
           <p class="element__title">Алтай</p>
-          <button class="element__like"></button>
+          <button class="element__like button button_type_active"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
         <div class="element__info">
           <p class="element__title">Карелия</p>
-          <button class="element__like"></button>
+          <button class="element__like button button_type_active"></button>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
         <div class="element__info">
           <p class="element__title">Владивосток</p>
-          <button class="element__like"></button>
+          <button class="element__like button button_type_active"></button>
         </div>
       </div>
     </section>
