--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body class="page">
   <div class="popup">
-    <div class="popup__container">
-      <button class="popup__close-btn button button_type_active"></button>
+    <form class="popup__container">
+      <input type="button" class="popup__close-btn button button_type_active">
       <a class="popup__title">Редактировать профиль</a>
       <label class="popup__label" for="profile-name"></label>
-      <input type="text" class="popup__item" id="profile-name" name="profile-name" placeholder="Имя Фамилия" required>
+      <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required>
       <div class="popup__line"></div>
       <label class="popup__label" for="profile-occupation"></label>
-      <input type="text" class="popup__item" id="profile-occupation" name="profile-occupation" placeholder="Род деятельности" required>
+      <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required>
       <div class="popup__line"></div>
-      <button class="popup__save-btn button button_type_active">Сохранить</button>
-    </div>
+      <input type="submit" class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить">
+    </form>
   </div>
   <header class="header">
     <div class="header__logo"></div>
@@ -42,42 +42,54 @@
         <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
         <div class="element__info">
           <p class="element__title">Карачаевск</p>
-          <button class="element__like button button_type_active"></button>
+          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
+          </svg>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
         <div class="element__info">
           <p class="element__title">Гора Эльбрус</p>
-          <button class="element__like button button_type_active"></button>
+          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
+          </svg>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
         <div class="element__info">
           <p class="element__title">Домбай</p>
-          <button class="element__like button button_type_active"></button>
+          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
+          </svg>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
         <div class="element__info">
           <p class="element__title">Алтай</p>
-          <button class="element__like button button_type_active"></button>
+          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
+          </svg>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
         <div class="element__info">
           <p class="element__title">Карелия</p>
-          <button class="element__like button button_type_active"></button>
+          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
+          </svg>
         </div>
       </div>
       <div class="element">
         <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
         <div class="element__info">
           <p class="element__title">Владивосток</p>
-          <button class="element__like button button_type_active"></button>
+          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
+          </svg>
         </div>
       </div>
     </section>
@@ -85,5 +97,6 @@
   <footer class="footer">
    <div>&copy; 2020 Mesto Russia</div>
   </footer>
+  <script src="pages/index.js"></script>
 </body>
 </html>
