fix: поправить close btn и заголовки

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page">
   <div class="popup">
     <form class="popup__container">
-      <input type="button" class="popup__close-btn button button_type_active">
+      <input type="button" class="popup__close-btn button button_type_active" value="Закрыть">
       <a class="popup__title">Редактировать профиль</a>
       <label class="popup__label" for="profile-name"></label>
       <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required>
@@ -30,8 +30,8 @@
       <div class="profile__item">
         <div class="profile__avatar"></div>
         <div class="profile__info">
-          <p class="profile__name">Жак-Ив Кусто</p>
-          <p class="profile__occupation">Исследователь океана</p>
+          <h2 class="profile__name">Жак-Ив Кусто</h2>
+          <h3 class="profile__occupation">Исследователь океана</h3>
           <button class="profile__edit-btn button button_type_active"></button>
         </div>
       </div>
@@ -41,7 +41,7 @@
       <div class="element">
         <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
         <div class="element__info">
-          <p class="element__title">Карачаевск</p>
+          <h3 class="element__title">Карачаевск</h3>
           <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
@@ -50,7 +50,7 @@
       <div class="element">
         <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
         <div class="element__info">
-          <p class="element__title">Гора Эльбрус</p>
+          <h3 class="element__title">Гора Эльбрус</h3>
           <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
@@ -59,7 +59,7 @@
       <div class="element">
         <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
         <div class="element__info">
-          <p class="element__title">Домбай</p>
+          <h3 class="element__title">Домбай</h3>
           <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
@@ -68,7 +68,7 @@
       <div class="element">
         <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
         <div class="element__info">
-          <p class="element__title">Алтай</p>
+          <h3 class="element__title">Алтай</h3>
           <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
@@ -77,7 +77,7 @@
       <div class="element">
         <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
         <div class="element__info">
-          <p class="element__title">Карелия</p>
+          <h3 class="element__title">Карелия</h3>
           <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
@@ -86,7 +86,7 @@
       <div class="element">
         <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
         <div class="element__info">
-          <p class="element__title">Владивосток</p>
+          <h3 class="element__title">Владивосток</h3>
           <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
