--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
         <div class="element__info">
           <h3 class="element__title">Карачаевск</h3>
-          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="element__like button button_type_active" width="22" height="19" viewbox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
         </div>
@@ -51,7 +51,7 @@
         <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
         <div class="element__info">
           <h3 class="element__title">Гора Эльбрус</h3>
-          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="element__like button button_type_active" width="22" height="19" viewbox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
         </div>
@@ -60,7 +60,7 @@
         <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
         <div class="element__info">
           <h3 class="element__title">Домбай</h3>
-          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="element__like button button_type_active" width="22" height="19" viewbox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
         </div>
@@ -69,7 +69,7 @@
         <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
         <div class="element__info">
           <h3 class="element__title">Алтай</h3>
-          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="element__like button button_type_active" width="22" height="19" viewbox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
         </div>
@@ -78,7 +78,7 @@
         <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
         <div class="element__info">
           <h3 class="element__title">Карелия</h3>
-          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="element__like button button_type_active" width="22" height="19" viewbox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
         </div>
@@ -87,7 +87,7 @@
         <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
         <div class="element__info">
           <h3 class="element__title">Владивосток</h3>
-          <svg class="element__like button button_type_active" width="22" height="19" viewBox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="element__like button button_type_active" width="22" height="19" viewbox="0 -1 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path stroke="black" stroke-width="1.5" fill-rule="evenodd" clip-rule="evenodd" d="M20.2991 1.68186C22.567 3.90213 22.567 7.54338 20.2991 9.78586L10.9804 19L1.6841 9.80806C0.606277 8.72013 0 7.27695 0 5.74496C0 4.21297 0.583823 2.76979 1.6841 1.68186C3.92957 -0.560619 7.61215 -0.560619 9.88007 1.70406L10.9804 2.792L12.0806 1.68186C14.3486 -0.560619 18.0311 -0.560619 20.2991 1.68186Z" fill="none"/>
           </svg>
         </div>
