--- a/index.html
+++ b/index.html
@@ -3,88 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="fonts/inter/inter.css">
   <link rel="stylesheet" href="pages/index.css">
   <title>Проект: Место</title>
 </head>
 <body class="page">
-  <div class="popup">
-    <form class="popup__container">
-      <input type="button" class="popup__close-btn button button_type_active" value="Закрыть">
-      <a class="popup__title">Редактировать профиль</a>
-      <label class="popup__label" for="profile-name"></label>
-      <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required>
-      <div class="popup__line"></div>
-      <label class="popup__label" for="profile-occupation"></label>
-      <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required>
-      <div class="popup__line"></div>
-      <input type="submit" class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить">
-    </form>
-  </div>
-  <header class="header">
-    <div class="header__logo"></div>
-    <div class="header__line"></div>
-  </header>
-  <main class="content">
-    <section class="profile">
-      <div class="profile__item">
-        <div class="profile__avatar"></div>
-        <div class="profile__info">
-          <h2 class="profile__name">Жак-Ив Кусто</h2>
-          <h3 class="profile__occupation">Исследователь океана</h3>
-          <button class="profile__edit-btn button button_type_active"></button>
-        </div>
+<header class="header">
+  <div class="header__logo"></div>
+  <div class="header__line"></div>
+</header>
+<main class="content">
+  <section class="profile">
+    <div class="profile__item">
+      <div class="profile__avatar"></div>
+      <div class="profile__info">
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <h2 class="profile__occupation">Исследователь океана</h2>
+        <input type="button" class="profile__edit-btn button button_type_active" value="Изменить" name="edit-btn">
       </div>
-      <button class="profile__add-btn button button_type_active"></button>
-    </section>
-    <section class="elements">
-      <div class="element">
-        <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
-        <div class="element__info">
-          <h3 class="element__title">Карачаевск</h3>
-          <button class="element__like button button_type_active"></button>
-        </div>
+    </div>
+    <input type="button" class="profile__add-btn button button_type_active" value="Добавить" name="add-btn">
+  </section>
+  <section class="elements">
+    <div class="element">
+      <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
+      <div class="element__info">
+        <h3 class="element__title">Карачаевск</h3>
+        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
       </div>
-      <div class="element">
-        <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
-        <div class="element__info">
-          <h3 class="element__title">Гора Эльбрус</h3>
-          <button class="element__like button button_type_active"></button>
-        </div>
+    </div>
+    <div class="element">
+      <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
+      <div class="element__info">
+        <h3 class="element__title">Гора Эльбрус</h3>
+        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
       </div>
-      <div class="element">
-        <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
-        <div class="element__info">
-          <h3 class="element__title">Домбай</h3>
-          <button class="element__like button button_type_active"></button>
-        </div>
+    </div>
+    <div class="element">
+      <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
+      <div class="element__info">
+        <h3 class="element__title">Домбай</h3>
+        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
       </div>
-      <div class="element">
-        <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
-        <div class="element__info">
-          <h3 class="element__title">Алтай</h3>
-          <button class="element__like button button_type_active"></button>
-        </div>
+    </div>
+    <div class="element">
+      <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
+      <div class="element__info">
+        <h3 class="element__title">Алтай</h3>
+        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
       </div>
-      <div class="element">
-        <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
-        <div class="element__info">
-          <h3 class="element__title">Карелия</h3>
-          <button class="element__like button button_type_active"></button>
-        </div>
+    </div>
+    <div class="element">
+      <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
+      <div class="element__info">
+        <h3 class="element__title">Карелия</h3>
+        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
       </div>
-      <div class="element">
-        <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
-        <div class="element__info">
-          <h3 class="element__title">Владивосток</h3>
-          <button class="element__like button button_type_active"></button>
-        </div>
+    </div>
+    <div class="element">
+      <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
+      <div class="element__info">
+        <h3 class="element__title">Владивосток</h3>
+        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-   <div>&copy; 2020 Mesto Russia</div>
-  </footer>
-  <script src="pages/index.js"></script>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <span>&copy; 2020 Mesto Russia</span>
+</footer>
+<div class="popup">
+  <form class="popup__container" name="popup">
+    <input type="button" class="popup__close-btn button button_type_active" value="Закрыть" name="close-btn">
+    <span class="popup__title">Редактировать профиль</span>
+    <label class="popup__label" for="profile-name"></label>
+    <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required name="profile-name">
+    <label class="popup__label" for="profile-occupation"></label>
+    <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required name="profile-job">
+    <button class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить" name="save-btn"></button>
+  </form>
+</div>
+<script src="pages/index.js"></script>
 </body>
 </html>
