fix: Поправить форматирование

--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
     <input type="button" class="popup__close-btn button button_type_active" value="Закрыть" name="close-btn">
     <span class="popup__title">Редактировать профиль</span>
     <label class="popup__label" for="profile-name"></label>
-    <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required name="profile-name">
+    <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required
+           name="profile-name">
     <label class="popup__label" for="profile-occupation"></label>
-    <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required name="profile-job">
-    <button class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить" name="save-btn"></button>
+    <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required
+           name="profile-job">
+    <button class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить"
+            name="save-btn"></button>
   </form>
 </div>
 <script src="pages/index.js"></script>
