fix: Паправить save-btn

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required
            name="profile-job">
     <button class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить"
-            name="save-btn"></button>
+            name="save-btn">Сохранить</button>
   </form>
 </div>
 <script src="pages/index.js"></script>
