--- a/index.html
+++ b/index.html
@@ -3,88 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
+  <link rel="stylesheet" property="stylesheet" href="pages/index.css">
   <title>Проект: Место</title>
 </head>
 <body class="page">
-<header class="header">
-  <div class="header__logo"></div>
-  <div class="header__line"></div>
-</header>
-<main class="content">
-  <section class="profile">
-    <div class="profile__item">
-      <div class="profile__avatar"></div>
-      <div class="profile__info">
-        <h1 class="profile__name">Жак-Ив Кусто</h1>
-        <h2 class="profile__occupation">Исследователь океана</h2>
-        <input type="button" class="profile__edit-btn button button_type_active" value="Изменить" name="edit-btn">
+  <header class="header">
+    <div class="header__logo"></div>
+  </header>
+  <main class="content">
+    <section class="profile">
+      <div class="profile__item">
+        <img class="profile__avatar" src="images/kusto.png" alt="Аватар">
+        <div class="profile__info">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <p class="profile__occupation">Исследователь океана</p>
+          <button type="button" class="profile__edit-btn button" value="Изменить" name="edit-btn">
+            <img class="profile__edit-btn-image" src="images/edit-btn.svg" alt="Изменить">
+          </button>
+        </div>
       </div>
+      <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn">
+        <img class="profile__add-btn-image" src="images/add-btn.svg" alt="Добавить">
+      </button>
+    </section>
+    <section class="elements">
+      <article class="element">
+        <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
+        <div class="element__info">
+          <h3 class="element__title">Карачаевск</h3>
+          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
+        <div class="element__info">
+          <h3 class="element__title">Гора Эльбрус</h3>
+          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
+        <div class="element__info">
+          <h3 class="element__title">Домбай</h3>
+          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
+        <div class="element__info">
+          <h3 class="element__title">Алтай</h3>
+          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
+        <div class="element__info">
+          <h3 class="element__title">Карелия</h3>
+          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
+        <div class="element__info">
+          <h3 class="element__title">Владивосток</h3>
+          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer class="footer">
+    <span>&copy; 2020 Mesto Russia</span>
+  </footer>
+  <div class="popup">
+    <div class="popup__container">
+      <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form" name="popup">
+        <input type="text" class="popup__field popup__field_type_name" id="profile-name" placeholder="Имя" required
+               name="profile-name">
+        <input type="text" class="popup__field popup__field_type_job" id="profile-occupation" placeholder="О себе"
+               required
+               name="profile-job">
+        <button type="submit" class="popup__save-btn button" value="Сохранить"
+                name="save-btn">Сохранить
+        </button>
+      </form>
     </div>
-    <input type="button" class="profile__add-btn button button_type_active" value="Добавить" name="add-btn">
-  </section>
-  <section class="elements">
-    <div class="element">
-      <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
-      <div class="element__info">
-        <h3 class="element__title">Карачаевск</h3>
-        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
-      <div class="element__info">
-        <h3 class="element__title">Гора Эльбрус</h3>
-        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
-      <div class="element__info">
-        <h3 class="element__title">Домбай</h3>
-        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
-      <div class="element__info">
-        <h3 class="element__title">Алтай</h3>
-        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
-      <div class="element__info">
-        <h3 class="element__title">Карелия</h3>
-        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
-      </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
-      <div class="element__info">
-        <h3 class="element__title">Владивосток</h3>
-        <input type="button" value="Лайк" class="element__like button button_type_active" name="like-btn">
-      </div>
-    </div>
-  </section>
-</main>
-<footer class="footer">
-  <span>&copy; 2020 Mesto Russia</span>
-</footer>
-<div class="popup">
-  <form class="popup__container" name="popup">
-    <input type="button" class="popup__close-btn button button_type_active" value="Закрыть" name="close-btn">
-    <span class="popup__title">Редактировать профиль</span>
-    <label class="popup__label" for="profile-name"></label>
-    <input type="text" class="popup__item popup__item_type_name" id="profile-name" placeholder="Имя" required
-           name="profile-name">
-    <label class="popup__label" for="profile-occupation"></label>
-    <input type="text" class="popup__item popup__item_type_job" id="profile-occupation" placeholder="О себе" required
-           name="profile-job">
-    <button class="popup__save-btn button button_type_active button_style_shadow" value="Сохранить"
-            name="save-btn">Сохранить</button>
-  </form>
-</div>
-<script src="pages/index.js"></script>
+  </div>
+  <script src="script/index.js"></script>
 </body>
 </html>
