fix: Отработать замечания по 2 итерации

--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__occupation">Исследователь океана</p>
-          <button type="button" class="profile__edit-btn button" value="Изменить" name="edit-btn">
-            <img class="profile__edit-btn-image" src="images/edit-btn.svg" alt="Изменить">
-          </button>
+          <button type="button" class="profile__edit-btn button" value="Изменить" name="edit-btn"></button>
         </div>
       </div>
-      <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn">
-        <img class="profile__add-btn-image" src="images/add-btn.svg" alt="Добавить">
-      </button>
+      <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn"></button>
     </section>
     <section class="elements">
       <article class="element">
