--- a/index.html
+++ b/index.html
@@ -23,48 +23,7 @@
       <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn"></button>
     </section>
     <section class="elements">
-      <article class="element">
-        <img class="element__image" src="images/element-karachaevsk.jpg" alt="Карачаевск">
-        <div class="element__info">
-          <h2 class="element__title">Карачаевск</h2>
-          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="images/element-elbrus.jpg" alt="Эльбрус">
-        <div class="element__info">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="images/element-dombai.jpg" alt="Домбай">
-        <div class="element__info">
-          <h2 class="element__title">Домбай</h2>
-          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="images/element-altai.jpg" alt="Алтай">
-        <div class="element__info">
-          <h2 class="element__title">Алтай</h2>
-          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="images/element-kareliya.jpg" alt="Карелия">
-        <div class="element__info">
-          <h2 class="element__title">Карелия</h2>
-          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__image" src="images/element-vladivostok.jpg" alt="Владивосток">
-        <div class="element__info">
-          <h2 class="element__title">Владивосток</h2>
-          <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
-        </div>
-      </article>
+
     </section>
   </main>
   <footer class="footer">
@@ -86,6 +45,15 @@
       </form>
     </div>
   </div>
+  <template id="card">
+    <article class="element">
+      <img class="element__image" src="" alt="">
+      <div class="element__info">
+        <h2 class="element__title"></h2>
+        <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
+      </div>
+    </article>
+  </template>
   <script src="script/index.js"></script>
 </body>
 </html>
