feat: Лайк карточки

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
       </div>
       <button type="button" class="profile__add-btn button" value="Добавить" name="add-btn"></button>
     </section>
-    <section class="elements">
-
-    </section>
+    <section class="elements"></section>
   </main>
   <footer class="footer">
     <span>&copy; 2020 Mesto Russia</span>
