feat: сделать Удаление карточки

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <h2 class="element__title"></h2>
         <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
       </div>
+      <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
     </article>
   </template>
   <script src="script/index.js"></script>
