--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
   <footer class="footer">
     <span>&copy; 2020 Mesto Russia</span>
   </footer>
-  <div class="popup">
-    <div class="popup__container">
-      <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn" id="closeBtn"></button>
-      <h3 class="popup__title"></h3>
-      <form class="popup__form" name="popup">
-        <input type="text" class="popup__field" id="name" placeholder="" required
-               name="profile-name">
-        <input type="text" class="popup__field" id="source" placeholder=""
-               required
-               name="profile-source">
-        <button type="submit" class="popup__save-btn button" value="Сохранить"
-                name="save-btn" id="saveBtn">Сохранить
-        </button>
-      </form>
+  <template id="popup">
+    <div class="popup smooth">
+      <div class="popup__container">
+        <button type="button" class="popup__close-btn button" value="Закрыть" name="close-btn" id="closeBtn"></button>
+        <h3 class="popup__title"></h3>
+        <form class="popup__form" name="popup">
+          <input type="text" class="popup__field" id="name" placeholder="" required
+                 name="profile-name">
+          <input type="text" class="popup__field" id="source" placeholder=""
+                 required
+                 name="profile-source">
+          <button type="submit" class="popup__save-btn button" value="Сохранить"
+                  name="save-btn" id="saveBtn">Сохранить
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
+  </template>
   <template id="card">
-    <article class="element">
+    <article class="element smooth">
       <img class="element__image" src="" alt="">
       <div class="element__info">
         <h2 class="element__title"></h2>
