fix: fill empty src/alt in <img> for template

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <template id="image-popup">
   <div class="image-popup fade fade_type_in">
     <div class="image-popup__container">
-      <img class="image-popup__image" src="" alt="">
+      <img class="image-popup__image" src="http://template" alt="template">
       <h3 class="image-popup__text"></h3>
       <button type="button" class="image-popup__close-btn button" value="Закрыть" name="close-btn"
               id="imageCloseBtn"></button>
@@ -57,7 +57,7 @@
 </template>
 <template id="card">
   <article class="element fade fade_type_in">
-    <img class="element__image" src="" alt="">
+    <img class="element__image" src="http://template" alt="template">
     <div class="element__info">
       <h2 class="element__title"></h2>
       <button type="button" value="Лайк" class="element__like button" name="like-btn"></button>
