--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <button type="button" value="Удалить" class="element__delete button" name="delete-btn"></button>
   </article>
 </template>
+<script src="script/cards.js"></script>
 <script src="script/validate.js"></script>
 <script src="script/index.js"></script>
 </body>
