feat: сделать PopupWithForm

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <form class="popup__form" name="profile-popup" novalidate>
       <fieldset class="popup__field-set">
         <label class="popup__label">
-          <input type="text" class="popup__field" id="profile-name" placeholder="Имя" required
+          <input type="text" class="popup__field" id="profileInputName" placeholder="Имя" required
                  name="profile-name" minlength="2" maxlength="40">
-          <span class="popup__field-error profile-name-error"></span>
+          <span class="popup__field-error profileInputName-error"></span>
         </label>
         <label class="popup__label">
-          <input type="text" class="popup__field" id="profile-job" placeholder="О себе"
+          <input type="text" class="popup__field" id="profileInputJob" placeholder="О себе"
                  required
                  name="profile-job" minlength="2" maxlength="200">
-          <span class="popup__field-error profile-job-error"></span>
+          <span class="popup__field-error profileInputJob-error"></span>
         </label>
         <button type="submit" class="popup__save-btn button" value="Сохранить"
                 name="profile-save-btn" id="profileFormSaveBtn">Сохранить
