feat: сделать Удаление карточки

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
   </div>
 </div>
 
-<div class="popup popup_opened popup_type_delete-card">
+<div class="popup popup_type_delete-card">
   <div class="popup__container popup__container_type_form">
     <button type="button" class="popup__close-btn button" value="Закрыть" name="delete-card-close-btn"
             id="deleteCardPopupCloseBtn"></button>
